# mugen-riscv

./: 1  README.en.md  README.md  catalog.json  dep_install.sh  list_minimal  list_riscv  mugen.sh  mugen_riscv.py  mugen_riscv_dbg.py  mugen_tc_status.csv  picked.list  qemu_ctl.sh  qemu_test.py  result_parser.py  runtest.py
.github/ISSUE_TEMPLATE/: docs-bug.yml  docs-lack.yml  testcase-bug.yml  testcase-check.yml  testcase-graft.yml  testcase-lack.yml  tool-bug.yml  tool-feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: docs.yml  testcase.yml  tool.yml
doc/: 测试用例检视规范.md
doc_riscv/Markdown/: RISC-V-oE多线程QEMU自动化测试使用.md  RISC-V-oE自动化测试结果分析脚本使用.md  RISC-V-oE自动化测试脚本使用.md  (+2 more)
libs/: results_listener.sh
lists/: list_pkglist  list_re  list_riscv  list_test
suite2cases/: .security_test.json.swp  389-ds-base-riscv.json  389-ds-base.json  AT.json  FS_Directory.json  FS_File.json  ImageMagick.json  ImageMagick_testcase.json  ModemManager-riscv.json  ModemManager.json  NetworkManager.json  OpenEXR-riscv.json  OpenEXR.json  OpenIPMI-riscv.json  OpenIPMI.json  PackageKit-riscv.json  PackageKit.json  abrt-riscv.json  abrt.json  accountsservice-riscv.json  accountsservice.json  acl-riscv.json  acl.json  acpid-riscv.json  acpid.json  admin_guide.json  alsa-utils-riscv.json  alsa-utils.json  amanda-riscv.json  amanda.json  anaconda-riscv.json  anaconda.json  ansible-riscv.json  ansible.json  apache-zookeeper.json  arptables-riscv.json  arptables.json  arpwatch-riscv.json  arpwatch.json  at-riscv.json  (+654 more)
testcases/cli-test/cmake/oe_test_cpack/: CMakeLists.txt  oe_test_cpack.sh
(+3505 files in other folders)
