cmake_minimum_required (VERSION 2.8)
project (demo)
add_executable(main main.c)
set(CPACK_PACKAGE_NAME "demo1")
set(CPACK_SET_DESTDIR ON)
set(CPACK_INSTALL_PREFIX "install")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_RPM_PACKAGE_GROUP "demo1")
set(CPACK_PACKAGE_VENDOR "demo1")
set(CPACK_RPM_PACKAGE_LICENSE "Apache 2.0 + Common Clause 1.0")
include(CPack)